--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   flutter_staggered_animations: ^1.1.1
   app_tracking_transparency: ^2.0.6
-  smartlook: ^2.0.1
-
+  flutter_uxcam: ^2.5.4
 
   #media:
   image: ^4.1.7
