--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -37,7 +37,7 @@
 			<array>
 				<string>com.googleusercontent.apps.723986947199-bl17d2hqrgqa4p6otl043sv7oju50a6j</string>
 				<string>fb3416398941970171</string>
-				<string>com.foodyman.test</string>
+				<string>com.mooup.test</string>
 			</array>
 		</dict>
 		<dict/>
