--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,23 @@
 org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
+android.enableR8.fullMode=false
+android.useFullClasspathForDexingTransform=true
+android.enableR8=true
+android.enableD8=true
+
+# R8 compatibility fixes
+android.enableR8.fullMode=false
+android.enableR8.keepRules=true
+android.enableR8.keepRules.keepAllAttributes=true
+android.enableR8.keepRules.keepAllClasses=true
+android.enableR8.keepRules.keepAllMethods=true
+android.enableR8.keepRules.keepAllFields=true
+
+# Gradle performance improvements
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
