--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_provider: ^2.1.2
   flutter_riverpod: ^2.5.1
   freezed_annotation: ^2.4.4
+  app_links: ^6.3.2
   shared_preferences: ^2.3.2
   permission_handler: ^11.3.1
   flutter_displaymode: ^0.6.0
