--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -69,6 +69,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="https" android:host="mooup.ma" />
                 <data android:scheme="https" android:host="open.mooup.ma" />
+                <!-- Don't specify a specific path to prevent route resolution errors -->
             </intent-filter>
 
             <!-- Optional: narrow matching to only restaurant paths if you prefer -->
