--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -11,6 +11,7 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applinks:foodyman.page.link</string>
+		<string>applinks:open.mooup.ma</string>
 	</array>
 </dict>
 </plist>
