--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,8 +55,13 @@ android {
         minSdkVersion 23
         multiDexEnabled true
         targetSdkVersion 35
-        versionCode 9
-        versionName "2.1.9"
+        versionCode 11
+        versionName "2.2.1"
+        
+        // Support for 16 KB memory page sizes (required for Android 15+)
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86_64'
+        }
     }
 
     signingConfigs {
@@ -73,10 +78,6 @@ android {
             signingConfig signingConfigs.release
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            // Fix R8 compatibility issues
-            ndk {
-                abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86_64'
-            }
         }
         debug {
             minifyEnabled false
